--- a/ti_mmwave_rospkg/cfg/6843ISK_3d.cfg
+++ b/ti_mmwave_rospkg/cfg/6843ISK_3d.cfg
@@ -48,6 +48,6 @@ analogMonitor 0 0
 aoaFovCfg -1 -90 90 -90 90
 cfarFovCfg -1 0 0 9.00
 cfarFovCfg -1 1 -5.14 5.14
-calibData 0 0 0
+%calibData 0 0 0
 sensorStart
 
