--- a/serial-ros2/package.xml
+++ b/serial-ros2/package.xml
@@ -19,8 +19,12 @@
   <author email="wjwwood@gmail.com">William Woodall</author>
   <author email="ash.gti@gmail.com">John Harrison</author>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
   <test_depend>boost</test_depend>
+
+  <export>
+  <build_type>ament_cmake</build_type>
+  </export>
 
 </package>
