--- a/ti_mmwave_ros2_interfaces/CMakeLists.txt
+++ b/ti_mmwave_ros2_interfaces/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(test_pkg)
+project(ti_mmwave_ros2_interfaces)
 
 # Default to C99
 if(NOT CMAKE_C_STANDARD)
@@ -17,6 +17,9 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
+find_package(std_msgs REQUIRED)
+
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
@@ -31,5 +34,12 @@ if(BUILD_TESTING)
   #set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
+
+# custom interface build
+rosidl_generate_interfaces(${PROJECT_NAME}
+  "msg/RadarScan.msg"
+  "srv/MMWaveCLI.srv"
+  DEPENDENCIES std_msgs
+ )
 
 ament_package()
