--- a/ti_mmwave_ros2_examples/param/go1_params.yaml
+++ b/ti_mmwave_ros2_examples/param/go1_params.yaml
@@ -6,7 +6,7 @@ amcl:
     alpha3: 0.05
     alpha4: 0.01
     alpha5: 0.04
-    base_frame_id: "base_link" # base_footprint
+    base_frame_id: "base_footprint" # base_footprint
     beam_skip_distance: 0.5
     beam_skip_error_threshold: 0.9
     beam_skip_threshold: 0.3
@@ -220,7 +220,7 @@ global_costmap:
 map_server:
   ros__parameters:
     use_sim_time: False
-    yaml_filename: "turtlebot3_world.yaml"
+    yaml_filename: "hy_map_editted.yaml"
 
 planner_server:
   ros__parameters:
