--- a/ti_mmwave_ros2_examples/param/go1_params.yaml
+++ b/ti_mmwave_ros2_examples/param/go1_params.yaml
@@ -6,7 +6,7 @@ amcl:
     alpha3: 0.05
     alpha4: 0.01
     alpha5: 0.04
-    base_frame_id: "base_link" # base_footprint
+    base_frame_id: "base_footprint" # base_footprint
     beam_skip_distance: 0.5
     beam_skip_error_threshold: 0.9
     beam_skip_threshold: 0.3
