--- a/ti_mmwave_ros2_examples/package.xml
+++ b/ti_mmwave_ros2_examples/package.xml
@@ -8,6 +8,7 @@
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <depend>ros-hubmle-perception</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
